--- a/projects/mona-ui-tester/src/app/app.component.html
+++ b/projects/mona-ui-tester/src/app/app.component.html
@@ -150,14 +150,14 @@
     <div style="display: flex; flex-direction: column; z-index: 100;">
 <!--        <mona-slider style="width: 200px;"></mona-slider>-->
 <!--        <mona-slider style="width: 250px;"></mona-slider>-->
-        <mona-slider [ngModel]="sliderValue" (ngModelChange)="onSliderValueChange($event)" [ranged]="false" style="width: 1200px;" [min]="0" [max]="100" [step]="2">
+        <mona-slider [ngModel]="sliderValue" orientation="vertical" (ngModelChange)="onSliderValueChange($event)" [ranged]="false" style="height: 240px;" [min]="0" [max]="10" [step]="1">
             <ng-template monaSliderTickValueTemplate let-value>
-                <span style="color: dodgerblue; font-weight: 600;" *ngIf="value%3===0">{{value}}</span>
-                <span style="color: #00a86b; font-weight: 600;" *ngIf="value%3!==0">{{value}}</span>
+                <span style="color: dodgerblue; font-weight: 600;" >{{value}}</span>
+<!--                <span style="color: #00a86b; font-weight: 600;" *ngIf="value%3!==0">{{value}}</span>-->
             </ng-template>
         </mona-slider>
 
-        <mona-slider [labelStep]="3" [ngModel]="rangedSliderValues" (ngModelChange)="onRangedSliderValueChange($event)" [ranged]="true" style="width: 765px;" [min]="1950" [max]="2250" [step]="5">
+        <mona-slider [labelStep]="3" [ngModel]="rangedSliderValues"  (ngModelChange)="onRangedSliderValueChange($event)" [ranged]="true" style="width: 765px;" [min]="1950" [max]="2250" [step]="5">
             <ng-template monaSliderTickValueTemplate let-value>
                 <span style="color: dodgerblue; font-weight: 600;" *ngIf="value%3===0">{{value}}</span>
                 <span style="color: #00a86b; font-weight: 600;" *ngIf="value%3!==0">{{value}}</span>
