--- a/projects/mona-ui/src/lib/inputs/modules/slider/components/slider/slider.component.html
+++ b/projects/mona-ui/src/lib/inputs/modules/slider/components/slider/slider.component.html
@@ -1,15 +1,24 @@
-<div class="mona-slider mona-slider-horizontal" [ngClass]="{'mona-no-animation': !initialized, 'mona-slider-ranged': ranged}" (focus)="sliderHandlerElement.focus()">
+<div class="mona-slider" [ngClass]="{'mona-no-animation': !initialized, 'mona-slider-ranged': ranged,
+                                    'mona-slider-horizontal': orientation==='horizontal',
+                                    'mona-slider-vertical': orientation==='vertical'}"
+     (focus)="sliderHandlerElement.focus()">
     <div class="mona-slider-track" #sliderTrackElement>
-        <div class="mona-slider-highlight" [ngClass]="{'mona-dragging': dragging}" [style.width.%]="trackData.size"
-             [style.left.px]="trackData.position"></div>
+        <div class="mona-slider-highlight" [ngClass]="{'mona-dragging': dragging}"
+             [style.width.%]="orientation==='horizontal' ? trackData.size : undefined"
+             [style.height.%]="orientation==='vertical' ? trackData.size : undefined"
+             [style.left.px]="orientation==='horizontal' ? trackData.position : undefined"
+             [style.bottom.px]="orientation==='vertical' ? trackData.position : undefined">
+        </div>
     </div>
     <div class="mona-slider-tick-list" #tickListElement>
         <ng-container *ngFor="let tick of ticks; let tx = index;">
-            <span class="mona-slider-tick" [ngClass]="{'mona-slider-tick-visible': showTicks}" #tickSpanElement *ngIf="tx !== 0">
+            <span class="mona-slider-tick" [ngClass]="{'mona-slider-tick-visible': showTicks}" #tickSpanElement
+                  *ngIf="tx !== 0">
                 <span [ngClass]="{'mona-dragging': dragging}"
-                    (click)="onTickClick($event, tickSpanElement)"></span>
+                      (click)="onTickClick($event, tickSpanElement)"></span>
             </span>
-            <span class="mona-slider-tick" [ngClass]="{'mona-slider-tick-visible': showTicks}" #tickSpanElement *ngIf="tx !== ticks.length - 1">
+            <span class="mona-slider-tick" [ngClass]="{'mona-slider-tick-visible': showTicks}" #tickSpanElement
+                  *ngIf="tx !== ticks.length - 1">
                 <span [ngClass]="{'mona-dragging': dragging}"
                       (click)="onTickClick($event, tickSpanElement)"></span>
             </span>
@@ -17,17 +26,19 @@
     </div>
     <div class="mona-slider-tick-label-list">
         <ng-container *ngFor="let tick of ticks; let tx = index;">
-            <span class="mona-slider-tick-label" >
+            <span class="mona-slider-tick-label">
                 <span *ngIf="!tickValueTemplate && tx % labelStep === 0">{{tick.value}}</span>
                 <span *ngIf="tickValueTemplate && tx % labelStep === 0">
-                    <ng-container *ngTemplateOutlet="tickValueTemplate; context: {$implicit: tick.value}"></ng-container>
+                    <ng-container
+                        *ngTemplateOutlet="tickValueTemplate; context: {$implicit: tick.value}"></ng-container>
                 </span>
             </span>
         </ng-container>
     </div>
     <div class="mona-slider-handler mona-slider-handler-first"
          [ngClass]="{'mona-dragging': dragging}"
-         [style.left.%]="handlerLeftPosition"
+         [style.left.%]="orientation === 'horizontal' ? handlerOnePosition : undefined"
+         [style.top.%]="orientation === 'vertical' ? handlerOnePosition : undefined"
          [style.pointer-events]="dragging && activeHandlerType==='secondary' ? 'none' : 'auto'"
          [attr.tabindex]="0"
          (keydown)="onHandlerKeyDown($event, 'primary')"
@@ -35,9 +46,10 @@
 
     <div class="mona-slider-handler mona-slider-handler-second"
          [ngClass]="{'mona-dragging': dragging}"
-         [style.left.%]="handlerTwoLeftPosition"
+         [style.left.%]="orientation === 'horizontal' ? handlerTwoPosition : undefined"
+         [style.top.%]="orientation === 'vertical' ? handlerTwoPosition : undefined"
          [style.pointer-events]="dragging && activeHandlerType==='primary' ? 'none' : 'auto'"
          [attr.tabindex]="0"
          (keydown)="onHandlerKeyDown($event, 'secondary')"
-         (mousedown)="onHandlerMouseDown('secondary')" #sliderHandlerElement2></div>
+         (mousedown)="onHandlerMouseDown('secondary')" #sliderHandlerElement2 style="background: darkorange" *ngIf="ranged"></div>
 </div>
