--- a/projects/mona-ui/src/lib/inputs/modules/slider/components/slider/slider.component.scss
+++ b/projects/mona-ui/src/lib/inputs/modules/slider/components/slider/slider.component.scss
@@ -69,6 +69,9 @@ div.mona-slider {
             display: flex;
             justify-content: space-between;
             user-select: none;
+            &.mona-position-before {
+                align-items: flex-start;
+            }
         }
 
         & span.mona-slider-tick-label {
@@ -96,7 +99,6 @@ div.mona-slider {
         & .mona-slider-highlight {
             position: absolute;
             left: 0;
-            top: 0;
             bottom: 0;
             right: 0;
             border: none;
@@ -148,11 +150,22 @@ div.mona-slider {
             position: absolute;
             width: 100%;
             height: 100%;
-            flex-direction: column;
+            flex-direction: column-reverse;
             align-items: flex-end;
             display: flex;
             justify-content: space-between;
             user-select: none;
+            &.mona-position-before {
+                align-items: flex-start;
+                & > span > span {
+                    margin-right: 10px;
+                }
+            }
+            &.mona-position-after {
+                & > span > span {
+                    margin-left: 10px;
+                }
+            }
         }
 
         & span.mona-slider-tick-label {
