Initial numeric text box implementaion

--- a/projects/mona-ui-tester/src/app/app.component.html
+++ b/projects/mona-ui-tester/src/app/app.component.html
@@ -156,8 +156,8 @@
             </ng-template>
         </mona-slider>
 
-<!--        <input type="number" [(ngModel)]="sliderValue" />-->
-<!--        <mona-slider style="width: 125px;"></mona-slider>-->
+        <mona-numeric-text-box [min]="-4" [step]="0.7" style="margin-top: 10px; width: 200px;"></mona-numeric-text-box>
+
     </div>
 
 </div>
