--- a/projects/mona-ui/styles/theme.scss
+++ b/projects/mona-ui/styles/theme.scss
@@ -57,6 +57,31 @@
     }
 }
 
+/** Icons */
+.gg-chevron-down {
+    box-sizing: border-box;
+    position: relative;
+    display: block;
+    //transform: scale(var(--ggs,1));
+    width: 22px;
+    height: 22px;
+    border: 2px solid transparent;
+    border-radius: 100px
+}
+.gg-chevron-down::after {
+    content: "";
+    display: block;
+    box-sizing: border-box;
+    position: absolute;
+    width: 10px;
+    height: 10px;
+    border-bottom: 2px solid;
+    border-right: 2px solid;
+    transform: rotate(45deg);
+    left: 4px;
+    top: 2px
+}
+
 
 /** General **/
 .mona-no-animation {
@@ -312,6 +337,15 @@ input[type="checkbox"][monaCheckBox] {
     &:indeterminate:disabled + label:before {
         @include disabled;
         border: 3px solid var(--mona-border-color);
+    }
+}
+
+/** Numeric Text Box */
+.mona-numeric-text-box {
+    background-color: var(--mona-background);
+    border: 1px solid var(--mona-border-color);
+    &:active, &:focus, &:focus-within {
+       box-shadow: var(--mona-active-shadow);
     }
 }
 
