--- a/projects/mona-ui/src/lib/inputs/modules/numeric-text-box/components/numeric-text-box/numeric-text-box.component.html
+++ b/projects/mona-ui/src/lib/inputs/modules/numeric-text-box/components/numeric-text-box/numeric-text-box.component.html
@@ -3,10 +3,10 @@
             autocomplete="off" tabindex="0" #valueTextBox>
     <div class="mona-numeric-text-box-spinners">
         <button monaButton (mousedown)="spin$.next('+')" (mouseup)="spinStop$.next()">
-<!--            <span>&rsaquo;</span>-->
+            <fa-icon [icon]="increaseIcon"></fa-icon>
         </button>
         <button monaButton (mousedown)="spin$.next('-')" (mouseup)="spinStop$.next()">
-<!--            <span>‹</span>-->
+            <fa-icon [icon]="decreaseIcon"></fa-icon>
         </button>
     </div>
 </div>
