--- a/projects/mona-ui-tester/src/app/app.component.html
+++ b/projects/mona-ui-tester/src/app/app.component.html
@@ -122,7 +122,7 @@
     </div>
 
     <div>
-        <textarea monaTextArea [(ngModel)]="textBoxValue" rows="4" style="width: 422px;"></textarea>
+        <textarea monaTextArea [(ngModel)]="numericTextBoxValue" rows="4" style="width: 422px;"></textarea>
     </div>
 
     <div>
