--- a/projects/mona-ui/src/lib/inputs/modules/numeric-text-box/components/numeric-text-box/numeric-text-box.component.html
+++ b/projects/mona-ui/src/lib/inputs/modules/numeric-text-box/components/numeric-text-box/numeric-text-box.component.html
@@ -1,11 +1,12 @@
-<div class="mona-numeric-text-box">
-    <input  monaTextBox [ngModel]="visibleValue" (ngModelChange)="value$.next($event)" (keydown)="onKeydown($event)" (paste)="onPaste($event)" (wheel)="onMouseWheel($event)"
-            autocomplete="off" tabindex="0" #valueTextBox>
+<div class="mona-numeric-text-box" [ngClass]="{'mona-disabled': disabled}">
+    <input monaTextBox [disabled]="disabled" [readonly]="readonly" [ngModel]="visibleValue" (ngModelChange)="value$.next($event)"
+           (keydown)="onKeydown($event)" (paste)="onPaste($event)" (wheel)="onMouseWheel($event)"
+           autocomplete="off" tabindex="0" #valueTextBox>
     <div class="mona-numeric-text-box-spinners">
-        <button monaButton (mousedown)="spin$.next('+')" (mouseup)="spinStop$.next()">
+        <button monaButton [disabled]="disabled" (mousedown)="spin$.next('+')" (mouseup)="spinStop$.next()">
             <fa-icon [icon]="increaseIcon"></fa-icon>
         </button>
-        <button monaButton (mousedown)="spin$.next('-')" (mouseup)="spinStop$.next()">
+        <button monaButton [disabled]="disabled" (mousedown)="spin$.next('-')" (mouseup)="spinStop$.next()">
             <fa-icon [icon]="decreaseIcon"></fa-icon>
         </button>
     </div>
