List keyboard navigation and item selection

--- a/projects/mona-ui-tester/src/app/app.component.html
+++ b/projects/mona-ui-tester/src/app/app.component.html
@@ -160,6 +160,14 @@
 <!--        <mona-slider style="width: 125px;"></mona-slider>-->
     </div>
 
+    <div>
+        <mona-list [data]="dropdownListDataItems" textField="text" valueField="value" groupField="group" selectionMode="multiple" (valueChange)="print($event)">
+            <ng-template monaListItemTemplate let-dataItem>
+                <span style="color: tomato; font-weight: bold;">{{dataItem.text}}</span>
+            </ng-template>
+        </mona-list>
+    </div>
+
 </div>
 
 <ng-template #popupContentTemplate>
