Use the list component for dropdown list popup

--- a/projects/mona-ui/src/lib/buttons/modules/split-button/components/split-button/split-button.component.html
+++ b/projects/mona-ui/src/lib/buttons/modules/split-button/components/split-button/split-button.component.html
@@ -4,7 +4,7 @@
         <ng-container [ngTemplateOutlet]="textTemplate" *ngIf="textTemplate"></ng-container>
     </button>
     <button monaButton [disabled]="disabled" tabindex="0" #menuButton>
-        <span>&rsaquo;</span>
+        <fa-icon [icon]="menuIcon"></fa-icon>
     </button>
     <mona-contextmenu [target]="menuButton" trigger="click" [minWidth]="popupWidth" [offset]="popupOffset" popupClass="mona-split-button-popup"
                       [menuItems]="menuItems" #contextMenuComponent ></mona-contextmenu>
