--- a/projects/mona-ui/src/lib/shared/components/list/list.component.html
+++ b/projects/mona-ui/src/lib/shared/components/list/list.component.html
@@ -14,7 +14,7 @@
             </ng-container>
             <li class="mona-list-item" *ngFor="let item of group.source"
                 [ngClass]="{'mona-selected': item.selected, 'mona-highlighted': item === highlightedItem, 'mona-disabled': item.disabled}"
-                (click)="onDropDownItemClick(item)">
+                (click)="onDropDownItemSelect(item)">
                 <mona-list-item [item]="item" [itemTemplate]="itemTemplate" ></mona-list-item>
             </li>
         </ng-container>
