--- a/projects/mona-ui/src/lib/shared/components/list/list.component.scss
+++ b/projects/mona-ui/src/lib/shared/components/list/list.component.scss
@@ -1,3 +1,8 @@
+:host {
+    width: 100%;
+    height: 100%;
+}
+
 ul.mona-list {
     list-style: none;
     user-select: none;
@@ -12,12 +17,10 @@ ul.mona-list {
         white-space: nowrap;
         overflow: hidden;
         cursor: pointer;
-
     }
 }
 
 li.mona-list-group-header {
     pointer-events: none;
     font-weight: bold;
-
 }
