--- a/projects/mona-ui/styles/theme.scss
+++ b/projects/mona-ui/styles/theme.scss
@@ -66,6 +66,37 @@
 }
 
 /** Shared Components **/
+.mona-input-selector {
+    width: auto;
+    height: var(--mona-input-height);
+    border: 1px solid var(--mona-border);
+    background: var(--mona-background);
+    color: var(--mona-text);
+    cursor: pointer;
+    display: flex;
+    outline: none;
+    @include hover-background;
+    @include active-background;
+    @include focus-shadow;
+}
+
+.mona-input-selector-value {
+    display: flex;
+    align-items: center;
+    white-space: nowrap;
+    padding: 0 8px;
+    flex: 1;
+}
+
+.mona-input-selector-icon {
+    width: var(--mona-input-height);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: var(--mona-text);
+}
+
+
 ul.mona-list {
     background: var(--mona-background);
     border: 1px solid var(--mona-border);
@@ -83,7 +114,6 @@ ul.mona-list {
 
         // TODO: Update this to a better visual style
         &.mona-highlighted:not(.mona-selected) {
-            //@include hover-background;
             border: 1px solid darkgray;
         }
 
@@ -102,19 +132,9 @@ li.mona-list-group-header {
 .mona-list-popup-content {
     padding: 0 !important;
     border-top: none !important;
-
-
-.mona-input-selector {
-    width: auto;
-    height: var(--mona-input-height);
-    border: 1px solid var(--mona-border);
-    background: var(--mona-background);
-    color: var(--mona-text);
-    cursor: pointer;
-    @include hover-background;
-    @include active-background;
-    @include focus-shadow;
 }
+
+
 
 /** Buttons */
 
@@ -225,27 +245,6 @@ mona-button-group button[monaButton] {
     overflow: hidden auto;
     border-top: 1px solid transparent !important;
     max-height: 250px;
-}
-
-div.mona-dropdown-list-menu {
-    width: var(--mona-input-height);
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    color: var(--mona-text);
-}
-
-/** Dropdown List */
-.mona-dropdown-list {
-    background-color: var(--mona-background);
-    border: 1px solid var(--mona-border-color);
-
-    @include hover-background;
-    @include focus-shadow;
-}
-
-.mona-dropdown-list-value {
-    color: var(--mona-text);
 }
 
 /** Inputs */
