--- a/projects/mona-ui/src/lib/inputs/modules/color-picker/components/color-picker/color-picker.component.scss
+++ b/projects/mona-ui/src/lib/inputs/modules/color-picker/components/color-picker/color-picker.component.scss
@@ -1,5 +1,5 @@
 .mona-color-picker {
-    height: calc(var(--mona-input-height));
+    height: var(--mona-input-height);
     display: flex;
     align-items: center;
     & > div {
@@ -12,9 +12,5 @@
         width: calc(var(--mona-input-height) - 8px);
         height: calc(var(--mona-input-height) - 8px);
         margin-left: 4px;
-    }
-    & > div:last-child {
-        flex: 1;
-        padding: 0 8px;
     }
 }
