--- a/projects/mona-ui-tester/src/app/app.component.html
+++ b/projects/mona-ui-tester/src/app/app.component.html
@@ -149,20 +149,21 @@
     </div>
 
     <div style="display: flex; flex-direction: column; z-index: 100;">
-        <mona-slider style="width: 200px;" [(ngModel)]="sliderValue"></mona-slider>
-        <mona-slider [labelStep]="1" [value]="rangedSliderValues" orientation="horizontal" labelPosition="after"  (valueChange)="onRangedSliderValueChange($event)" [ranged]="true" style="width: 500px;" [min]="0" [max]="24" [step]="1">
+        <mona-slider style="width: 200px;" [value]="sliderValue" (valueChange)="onSliderValueChange($event)"></mona-slider>
+        <mona-range-slider [labelStep]="1" [(value)]="rangedSliderValues" orientation="horizontal" labelPosition="after"
+                            style="width: 500px;" [min]="0" [max]="24" [step]="1">
             <ng-template monaSliderTickValueTemplate let-value>
                 <fa-icon [icon]="moonIcon" *ngIf="value < 6 || value > 22" style="color: mediumpurple;"></fa-icon>
                 <fa-icon [icon]="sunIcon" *ngIf="value >= 6 && value <= 22" style="color: #fafd0f;"></fa-icon>
             </ng-template>
-        </mona-slider>
+        </mona-range-slider>
 
         <mona-numeric-text-box [readonly]="true" [min]="-4" [step]="0.7" [(ngModel)]="numericTextBoxValue" [formatter]="numericTextBoxFormatter" style="margin-top: 10px; width: 200px;"></mona-numeric-text-box>
 
     </div>
 
     <div>
-        <mona-color-palette [palette]="colorPalette" [columns]="sliderValue" [tileSize]="27" [ngModel]="colorPaletteValue" (ngModelChange)="print($event)"></mona-color-palette>
+<!--        <mona-color-palette [palette]="colorPalette" [columns]="sliderValue" [tileSize]="27" [ngModel]="colorPaletteValue" (ngModelChange)="print($event)"></mona-color-palette>-->
         <mona-color-picker [palette]="colorPalette" [ngModel]="colorPickerValue" (ngModelChange)="onColorPickerValueChange($event)" style="margin-left: 30px;"></mona-color-picker>
     </div>
 
