Small dropdown refactor

--- a/projects/mona-ui/src/lib/dropdowns/modules/drop-down-list/components/drop-down-list/drop-down-list.component.html
+++ b/projects/mona-ui/src/lib/dropdowns/modules/drop-down-list/components/drop-down-list/drop-down-list.component.html
@@ -16,7 +16,7 @@
 </div>
 
 <ng-template #dropdownPopupTemplate>
-    <mona-list [listData]="listData" [textField]="textField" [valueField]="valueField" [groupField]="groupField" [itemDisabler]="itemDisabler"
+    <mona-list [data]="viewData" [textField]="textField" [valueField]="valueField" [groupField]="groupField" [itemDisabler]="itemDisabler"
                [value]="selectedListItems" (valueChange)="onSelectedListItemsChange($event)">
         <ng-container *ngIf="itemTemplate">
             <ng-template monaListItemTemplate let-dataItem let-listItem="listItem">
