--- a/projects/mona-ui-tester/src/app/app.component.html
+++ b/projects/mona-ui-tester/src/app/app.component.html
@@ -111,7 +111,7 @@
     </div>
 
     <div>
-        <input type="text" monaTextBox style="margin-right: 10px;" />
+        <input type="text" [(ngModel)]="textBoxValue2" monaTextBox style="margin-right: 10px;" />
         <mona-text-box [ngModel]="textBoxValue" (ngModelChange)="onTextBoxValueChange($event)">
             <ng-template monaTextBoxPrefixTemplate>
                 <fa-icon [icon]="searchIcon"></fa-icon>
