--- a/projects/mona-ui/src/lib/shared/components/list/list.component.html
+++ b/projects/mona-ui/src/lib/shared/components/list/list.component.html
@@ -13,7 +13,7 @@
                 </ng-container>
             </ng-container>
             <li class="mona-list-item" *ngFor="let item of group.source"
-                [ngClass]="{'mona-selected': item.selected, 'mona-highlighted': item === highlightedItem, 'mona-disabled': item.disabled}"
+                [ngClass]="{'mona-selected': item.selected, 'mona-highlighted': selectionMode === 'multiple' && item === highlightedItem, 'mona-disabled': item.disabled}"
                 (click)="onDropDownItemSelect(item)">
                 <mona-list-item [item]="item" [itemTemplate]="itemTemplate" ></mona-list-item>
             </li>
