Dropdown list disabled option

--- a/projects/mona-ui/src/lib/dropdowns/modules/drop-down-list/components/drop-down-list/drop-down-list.component.html
+++ b/projects/mona-ui/src/lib/dropdowns/modules/drop-down-list/components/drop-down-list/drop-down-list.component.html
@@ -1,4 +1,5 @@
 <div class="mona-dropdown mona-dropdown-list mona-input-selector" [attr.tabindex]="disabled ? -1 : 0"
+     [ngClass]="{'mona-disabled': disabled}"
      (click)="open()"
      #dropdownWrapper>
     <div class="mona-input-selector-value">
