--- a/projects/mona-ui/styles/theme.scss
+++ b/projects/mona-ui/styles/theme.scss
@@ -226,6 +226,20 @@ mona-button-group button[monaButton] {
     width: 100%;
 }
 
+/** Combo Box */
+.mona-combo-box {
+    & .mona-input-selector-value {
+        & mona-text-box {
+            box-shadow: none;
+            & div:first-child {
+                border-left: none;
+            }
+        }
+    }
+}
+
+
+/** Dropdown List */
 .mona-dropdown-list {
     &.mona-disabled {
         @include disabled;
